TRAINED model and got 100% , gonna do manual testing later

--- a/models.ipynb
+++ b/models.ipynb
@@ -19,10 +19,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "ZVgxHAMR_R6k",
-        "outputId": "354e8909-11ad-4843-e231-81ce9c3df46c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "354e8909-11ad-4843-e231-81ce9c3df46c"
       },
       "outputs": [
         {
@@ -58,11 +58,11 @@
         "print(dataset['fail/pass'].value_counts(normalize=True) * 100)"
       ],
       "metadata": {
-        "id": "E1C6048lGyKH",
-        "outputId": "41bdd3a4-c961-4c05-9f6e-702fccd5912d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "E1C6048lGyKH",
+        "outputId": "41bdd3a4-c961-4c05-9f6e-702fccd5912d"
       },
       "execution_count": 2,
       "outputs": [
@@ -111,14 +111,14 @@
       "metadata": {
         "id": "ngzEAYSKHqti"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=42)\n",
         "\n",
         "# Model training\n",
         "rf_model = RandomForestClassifier(random_state=42)\n",
@@ -131,10 +131,30 @@
         "print(classification_report(y_test, y_pred))"
       ],
       "metadata": {
-        "id": "H6JoF7LGHtLl"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H6JoF7LGHtLl",
+        "outputId": "da17422c-d368-4353-93d2-9168e666da62"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      1.00      1.00        51\n",
+            "           1       1.00      1.00      1.00        47\n",
+            "\n",
+            "    accuracy                           1.00        98\n",
+            "   macro avg       1.00      1.00      1.00        98\n",
+            "weighted avg       1.00      1.00      1.00        98\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
