manual testing done , 4/5 correct. gonna do more like 100 records

--- a/models.ipynb
+++ b/models.ipynb
@@ -158,21 +158,97 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "\n",
+        "# Sample manual test data\n",
+        "test_data = pd.DataFrame({\n",
+        "    \"OL_Passes\": [6, 5, 8, 7, 6],\n",
+        "    \"OL_Credits\": [3, 2, 4, 3, 2],\n",
+        "    \"OL_Math\": [\"A\", \"F\", \"B\", \"C\", \"S\"],\n",
+        "    \"OL_English\": [\"B\", \"S\", \"A\", \"C\", \"F\"],\n",
+        "    \"OL_Sinhala_Tamil\": [\"C\", \"S\", \"A\", \"B\", \"F\"],\n",
+        "    \"AL_Passes\": [3, 2, 3, 1, 3],\n",
+        "    \"fail/pass\": [1, 0, 1, 0, 0]  # Ground truth for testing\n",
+        "})\n",
+        "\n",
+        "# Grade Mapping\n",
+        "grade_mapping = {'A': 4, 'B': 3, 'C': 2, 'S': 1, 'F': 0}\n",
+        "test_data['OL_Math'] = test_data['OL_Math'].map(grade_mapping)\n",
+        "test_data['OL_English'] = test_data['OL_English'].map(grade_mapping)\n",
+        "test_data['OL_Sinhala_Tamil'] = test_data['OL_Sinhala_Tamil'].map(grade_mapping)\n",
+        "\n",
+        "# Drop the ground truth column temporarily for predictions\n",
+        "X_test = test_data.drop(columns=[\"fail/pass\"])\n",
+        "\n",
+        "# Display data\n",
+        "print(X_test)"
+      ],
       "metadata": {
-        "id": "W7zbID0pHtKA"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W7zbID0pHtKA",
+        "outputId": "2637639f-28f7-42bd-ec4b-4513742e0296"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   OL_Passes  OL_Credits  OL_Math  OL_English  OL_Sinhala_Tamil  AL_Passes\n",
+            "0          6           3        4           3                 2          3\n",
+            "1          5           2        0           1                 1          2\n",
+            "2          8           4        3           4                 4          3\n",
+            "3          7           3        2           2                 3          1\n",
+            "4          6           2        1           0                 0          3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Make predictions\n",
+        "predictions = rf_model.predict(X_test)\n",
+        "\n",
+        "# Add predictions to the test data\n",
+        "test_data['predicted_fail/pass'] = predictions\n",
+        "\n",
+        "# Compare predictions with ground truth\n",
+        "print(test_data)"
+      ],
       "metadata": {
-        "id": "IfKYCQUyHtIN"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IfKYCQUyHtIN",
+        "outputId": "208bad24-984a-492c-f59d-afbe0084e772"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "   OL_Passes  OL_Credits  OL_Math  OL_English  OL_Sinhala_Tamil  AL_Passes  \\\n",
+            "0          6           3        4           3                 2          3   \n",
+            "1          5           2        0           1                 1          2   \n",
+            "2          8           4        3           4                 4          3   \n",
+            "3          7           3        2           2                 3          1   \n",
+            "4          6           2        1           0                 0          3   \n",
+            "\n",
+            "   fail/pass  predicted_fail/pass  \n",
+            "0          1                    0  \n",
+            "1          0                    0  \n",
+            "2          1                    1  \n",
+            "3          0                    0  \n",
+            "4          0                    0  \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
