manual testing done for 100 records , got 98% this is random forest model.

--- a/models.ipynb
+++ b/models.ipynb
@@ -252,9 +252,114 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "# Function to generate synthetic data for manual testing\n",
+        "def generate_manual_testing_data(num_records=100):\n",
+        "    data = []\n",
+        "    for _ in range(num_records):\n",
+        "        ol_passes = np.random.randint(4, 10)  # Between 4 to 9\n",
+        "        ol_credits = np.random.randint(0, ol_passes + 1)\n",
+        "        ol_math = np.random.choice([0, 1, 2, 3, 4])  # F (0) to A (4)\n",
+        "        ol_english = np.random.choice([0, 1, 2, 3, 4])  # F (0) to A (4)\n",
+        "        ol_sinhala_tamil = np.random.choice([0, 1, 2, 3, 4])  # F (0) to A (4)\n",
+        "        al_passes = np.random.randint(0, 5)  # Between 0 to 4 passes\n",
+        "        age = np.random.randint(18, 25)  # Random ages between 18 and 24\n",
+        "\n",
+        "        # Check pass/fail eligibility based on your criteria\n",
+        "        is_eligible = (\n",
+        "            ol_passes >= 6 and\n",
+        "            ol_credits >= 3 and\n",
+        "            ol_math >= 2 and  # C or better\n",
+        "            ol_english >= 2 and  # C or better\n",
+        "            ol_sinhala_tamil >= 2 and  # C or better\n",
+        "            al_passes >= 3 and\n",
+        "            age > 20\n",
+        "        )\n",
+        "\n",
+        "        data.append([ol_passes, ol_credits, ol_math, ol_english, ol_sinhala_tamil, al_passes, 1 if is_eligible else 0])\n",
+        "\n",
+        "    columns = [\"OL_Passes\", \"OL_Credits\", \"OL_Math\", \"OL_English\", \"OL_Sinhala_Tamil\", \"AL_Passes\", \"fail/pass\"]\n",
+        "    return pd.DataFrame(data, columns=columns)\n",
+        "\n"
+      ],
       "metadata": {
         "id": "t5wcX1CsHtHK"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Generate 100 records\n",
+        "manual_test_data = generate_manual_testing_data(100)\n",
+        "\n",
+        "# Prepare X_test and y_test\n",
+        "X_test = manual_test_data.drop(columns=[\"fail/pass\"])\n",
+        "y_test = manual_test_data[\"fail/pass\"]"
+      ],
+      "metadata": {
+        "id": "6ZkmlcqrHtFX"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Make predictions\n",
+        "predictions = rf_model.predict(X_test)\n",
+        "\n",
+        "# Add predictions to the manual test data\n",
+        "manual_test_data[\"predicted_fail/pass\"] = predictions\n",
+        "\n",
+        "# Calculate and display accuracy\n",
+        "accuracy = accuracy_score(y_test, predictions)\n",
+        "print(f\"Manual Testing Accuracy: {accuracy * 100:.2f}%\")\n",
+        "\n",
+        "# Display the manual test data for inspection\n",
+        "print(manual_test_data.head())"
+      ],
+      "metadata": {
+        "id": "wfgLWlDEKQ5T",
+        "outputId": "dcc05f8f-02c4-4af7-dc62-22039cc34da1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Manual Testing Accuracy: 98.00%\n",
+            "   OL_Passes  OL_Credits  OL_Math  OL_English  OL_Sinhala_Tamil  AL_Passes  \\\n",
+            "0          4           2        2           1                 3          4   \n",
+            "1          4           0        0           1                 3          1   \n",
+            "2          7           7        1           0                 3          4   \n",
+            "3          5           1        0           4                 4          4   \n",
+            "4          4           2        3           3                 3          3   \n",
+            "\n",
+            "   fail/pass  predicted_fail/pass  \n",
+            "0          0                    0  \n",
+            "1          0                    0  \n",
+            "2          0                    0  \n",
+            "3          0                    0  \n",
+            "4          0                    0  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Oyl1JJevKQ4A"
       },
       "execution_count": null,
       "outputs": []
@@ -263,7 +368,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "6ZkmlcqrHtFX"
+        "id": "SIuAMhegKQ17"
       },
       "execution_count": null,
       "outputs": []
