--- a/models.ipynb
+++ b/models.ipynb
@@ -15,6 +15,15 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# ***Load file from google drive***"
+      ],
+      "metadata": {
+        "id": "q5djxufuKhpw"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -46,6 +55,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# ***Put data from csv to Dataframe***"
+      ],
+      "metadata": {
+        "id": "1wnO8aapKmmG"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Load the dataset\n",
@@ -53,9 +71,7 @@
         "\n",
         "# Display the first few rows\n",
         "print(dataset.head())\n",
-        "\n",
-        "# Check class balance\n",
-        "print(dataset['fail/pass'].value_counts(normalize=True) * 100)"
+        "\n"
       ],
       "metadata": {
         "colab": {
@@ -92,21 +108,56 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# ***Check class imbalance***"
+      ],
+      "metadata": {
+        "id": "-QWnM67qKtrt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check class balance\n",
+        "print(dataset['fail/pass'].value_counts(normalize=True) * 100)"
+      ],
+      "metadata": {
+        "id": "-A5wyrKUKs3X"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.metrics import classification_report\n",
-        "\n",
+        "from sklearn.metrics import classification_report"
+      ],
+      "metadata": {
+        "id": "RcLWW4WhKzGD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ***Convert Grade letter to integers for the model to understand***"
+      ],
+      "metadata": {
+        "id": "pRzZ4b6rK1Au"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Encoding categorical grades\n",
         "grade_mapping = {'A': 4, 'B': 3, 'C': 2, 'S': 1, 'F': 0}\n",
         "dataset['OL_Math'] = dataset['OL_Math'].map(grade_mapping)\n",
         "dataset['OL_English'] = dataset['OL_English'].map(grade_mapping)\n",
-        "dataset['OL_Sinhala_Tamil'] = dataset['OL_Sinhala_Tamil'].map(grade_mapping)\n",
-        "\n",
-        "# Splitting data\n",
-        "X = dataset.drop(columns=['fail/pass'])\n",
-        "y = dataset['fail/pass']"
+        "dataset['OL_Sinhala_Tamil'] = dataset['OL_Sinhala_Tamil'].map(grade_mapping)\n"
       ],
       "metadata": {
         "id": "ngzEAYSKHqti"
@@ -115,11 +166,42 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# ***prepare data to feed to the model***"
+      ],
+      "metadata": {
+        "id": "kvivx_QtK9gt"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "# Splitting data\n",
+        "X = dataset.drop(columns=['fail/pass'])\n",
+        "y = dataset['fail/pass']\n",
         "\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=42)\n",
-        "\n",
+        "#train test split\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=42)"
+      ],
+      "metadata": {
+        "id": "qX8mNkNWK7nH"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ***Train model and get testing accuracy***"
+      ],
+      "metadata": {
+        "id": "DUus63a4LJ7y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Model training\n",
         "rf_model = RandomForestClassifier(random_state=42)\n",
         "rf_model.fit(X_train, y_train)\n",
@@ -157,11 +239,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# ***Manul testing for a few records***"
+      ],
+      "metadata": {
+        "id": "aKDukBDwLPtD"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "\n",
         "# Sample manual test data\n",
         "test_data = pd.DataFrame({\n",
         "    \"OL_Passes\": [6, 5, 8, 7, 6],\n",
@@ -190,9 +278,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W7zbID0pHtKA",
-        "outputId": "2637639f-28f7-42bd-ec4b-4513742e0296"
+        "outputId": "ca2ea3f0-4520-43b3-cea6-f49ba2e9bf09"
       },
-      "execution_count": 5,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -207,6 +295,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ***result was 4/5 was correctn***"
+      ],
+      "metadata": {
+        "id": "kgDDQ0d5LTpr"
+      }
     },
     {
       "cell_type": "code",
@@ -251,11 +348,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# ***Generate 100 records within our TTO Prmpt for testing with labels***"
+      ],
+      "metadata": {
+        "id": "rPIog934LgYv"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "from sklearn.metrics import accuracy_score\n",
         "\n",
         "# Function to generate synthetic data for manual testing\n",
         "def generate_manual_testing_data(num_records=100):\n",
@@ -289,7 +392,7 @@
       "metadata": {
         "id": "t5wcX1CsHtHK"
       },
-      "execution_count": 8,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -305,8 +408,17 @@
       "metadata": {
         "id": "6ZkmlcqrHtFX"
       },
-      "execution_count": 9,
+      "execution_count": 15,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# ***Train and get Accuracy***"
+      ],
+      "metadata": {
+        "id": "q5ZF8o4LLtdP"
+      }
     },
     {
       "cell_type": "code",
@@ -325,25 +437,25 @@
         "print(manual_test_data.head())"
       ],
       "metadata": {
-        "id": "wfgLWlDEKQ5T",
-        "outputId": "dcc05f8f-02c4-4af7-dc62-22039cc34da1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wfgLWlDEKQ5T",
+        "outputId": "2c9bc3b7-959b-468e-e2a1-52cd81a4bf37"
       },
-      "execution_count": 10,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Manual Testing Accuracy: 98.00%\n",
+            "Manual Testing Accuracy: 99.00%\n",
             "   OL_Passes  OL_Credits  OL_Math  OL_English  OL_Sinhala_Tamil  AL_Passes  \\\n",
-            "0          4           2        2           1                 3          4   \n",
-            "1          4           0        0           1                 3          1   \n",
-            "2          7           7        1           0                 3          4   \n",
-            "3          5           1        0           4                 4          4   \n",
-            "4          4           2        3           3                 3          3   \n",
+            "0          4           2        4           3                 1          4   \n",
+            "1          8           7        4           0                 0          2   \n",
+            "2          5           5        2           3                 3          3   \n",
+            "3          5           5        3           2                 2          3   \n",
+            "4          9           3        4           2                 0          2   \n",
             "\n",
             "   fail/pass  predicted_fail/pass  \n",
             "0          0                    0  \n",
