removed age when testing

--- a/models.ipynb
+++ b/models.ipynb
@@ -1062,9 +1062,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DmUFZuFkhOT_",
-        "outputId": "0cd2edd1-483e-4a67-894d-96fc29db9ed5"
+        "outputId": "89f1ac5c-4c80-46b0-fe23-a3411b17dd75"
       },
-      "execution_count": 19,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -1107,8 +1107,7 @@
         "        row[\"OL_Math\"] >= 2 and  # C or better\n",
         "        row[\"OL_English\"] >= 2 and  # C or better\n",
         "        row[\"OL_Sinhala_Tamil\"] >= 2 and  # C or better\n",
-        "        row[\"AL_Passes\"] >= 3 and\n",
-        "        row[\"Age\"] > 20\n",
+        "        row[\"AL_Passes\"] >= 3\n",
         "    )\n",
         "    return 1 if is_eligible else 0\n",
         "\n",
@@ -1123,9 +1122,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QvWqmD5OhORr",
-        "outputId": "d14162a8-1942-4b6c-feef-a866fc4b39e3"
+        "outputId": "5350a506-ed81-4284-87d4-eb2d54252ded"
       },
-      "execution_count": 22,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -1187,7 +1186,7 @@
       "metadata": {
         "id": "5Un5TCCkhOP2"
       },
-      "execution_count": 25,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -1220,15 +1219,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Cim81YW3hOOh",
-        "outputId": "265badbc-cc09-454e-e03b-1d2d96c3f9a7"
+        "outputId": "174ad7cd-3235-40d6-9583-f80c8041b58e"
       },
-      "execution_count": 26,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Manual Testing Accuracy: 99.81%\n",
+            "Manual Testing Accuracy: 100.00%\n",
             "                ApplicantID  Age  OL_Passes  OL_Credits  OL_Math  OL_English  \\\n",
             "0  6724a28c1714fb5e223f0237   30          9           9        4           4   \n",
             "1  6724a28c1714fb5e223f0238   26          9           9        4           2   \n",
