tried with decision trees

--- a/models.ipynb
+++ b/models.ipynb
@@ -143,13 +143,14 @@
       "cell_type": "code",
       "source": [
         "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.tree import DecisionTreeClassifier\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.metrics import classification_report"
       ],
       "metadata": {
         "id": "RcLWW4WhKzGD"
       },
-      "execution_count": 4,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -244,6 +245,45 @@
             "    accuracy                           1.00        98\n",
             "   macro avg       1.00      1.00      1.00        98\n",
             "weighted avg       1.00      1.00      1.00        98\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Model training\n",
+        "dt_model = DecisionTreeClassifier(random_state=42)\n",
+        "dt_model.fit(X_train, y_train)\n",
+        "\n",
+        "# Predictions\n",
+        "y_pred = dt_model.predict(X_test)\n",
+        "\n",
+        "# Evaluation\n",
+        "print(classification_report(y_test, y_pred))"
+      ],
+      "metadata": {
+        "id": "E_yhG4NtvWfe",
+        "outputId": "cf7bbf4e-6a29-4c40-c754-5641c844dbf6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      1.00      1.00       459\n",
+            "           1       1.00      1.00      1.00       567\n",
+            "\n",
+            "    accuracy                           1.00      1026\n",
+            "   macro avg       1.00      1.00      1.00      1026\n",
+            "weighted avg       1.00      1.00      1.00      1026\n",
             "\n"
           ]
         }
@@ -1246,8 +1286,30 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# ***try with decision trees***"
+      ],
+      "metadata": {
+        "id": "5_iOe96NRn-f"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Make predictions\n",
+        "predictions = dt_model.predict(X_test)\n",
+        "\n",
+        "# Add predictions to the manual test data\n",
+        "transformed_data[\"predicted_fail/pass\"] = predictions\n",
+        "\n",
+        "# Calculate and display accuracy\n",
+        "accuracy = accuracy_score(y_test, predictions)\n",
+        "print(f\"Manual Testing Accuracy: {accuracy * 100:.2f}%\")\n",
+        "\n",
+        "# Display the manual test data for inspection\n",
+        "print(transformed_data.head())"
+      ],
       "metadata": {
         "id": "x9noAMBZhOMM"
       },
